--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Our Work</a></li>
-          <li><a href="#team">Solutions</a></li>
+          <li><a href="#team">Our Clients</a></li>
 		      <li><a href="#contact">Contact Us</a></li>
         </ul>
             
